src/test/ui/lifetime-errors/ex4-anon-named-regions.stderr
error[E0621]: explicit lifetime required in the type of `other`
  --> $DIR/ex4-anon-named-regions.rs:21:21
   |
17 |     fn bar(&self, other: Foo) -> Foo<'a> {
   |                   ----- consider changing the type of `other` to `Foo<'a>`
...
21 |                     other
   |                     ^^^^^ lifetime `'a` required

error: aborting due to previous error

